--- a/project/index.html
+++ b/project/index.html
@@ -64,7 +64,7 @@
                  </div>
                  <div class="col-sm-8 col-md-8 col-lg-8">
                    <h5 style="text-align: left">
-                    <strong><a href="/project/project2/">Modeling, Testing, and Predicting: Diabetes Indicators amongst Pima Indian Females</a></strong>
+                    <strong><a href="/project/project3/">PEG Fusion Research Paper</a></strong>
                   </h5>
                 </div>
               </div>
@@ -77,7 +77,7 @@
                  </div>
                  <div class="col-sm-8 col-md-8 col-lg-8">
                    <h5 style="text-align: left">
-                    <strong><a href="/project/project4/">Include external html file</a></strong>
+                    <strong><a href="/project/project2/">Modeling, Testing, and Predicting: Diabetes Indicators amongst Pima Indian Females</a></strong>
                   </h5>
                 </div>
               </div>
