--- a/resume/index.html
+++ b/resume/index.html
@@ -65,10 +65,12 @@
 <script src="/rmarkdown-libs/header-attrs/header-attrs.js"></script>
 
 
-<center>
-<iframe src="/resume.pdf" width="100%" height="800" border="0">
+<body>
+<div align="center">
+<iframe width="800" height="1000" src="/resume.pdf" frameborder="1px">
 </iframe>
-</center>
+</div>
+</body>
 
             
 
