--- a/project/project4.knit/index.html
+++ b/project/project4.knit/index.html
@@ -54,23 +54,17 @@
       <div class="container">
         <div class="blog-post">
           <h3>
-            <strong><a href="/project/project4/">Parallel Programming: K-Means Clustering</a></strong>
+            <strong><a href="/project/project4.knit/">Parallel Programming: K-Means Clustering</a></strong>
           </h3>
         </div>
 
         <div class="panel panel-default">
           <div class="panel-body">
             <div class="blogpost">
-              
-<script src="/rmarkdown-libs/header-attrs/header-attrs.js"></script>
-
-
-<p><i class="fas fa-book"></i>   <a href="/project/project5/">Research Paper</a></p>
-<p><i class="fas fa-code-branch"></i>   <a href="/project/project6/">Project Source Code</a></p>
-<!--
-<i class="fa fa-pie-chart"></i> 
-<i class="fa fa-tasks"></i> 
--->
+              <p><!-- raw HTML omitted --><!-- raw HTML omitted -->   <a href="/project/project5/">Research Paper</a></p>
+<p><!-- raw HTML omitted --><!-- raw HTML omitted -->   <a href="/project/project6/">Project Source Code</a></p>
+<!-- raw HTML omitted -->
+<!-- raw HTML omitted -->
 
             
 
