--- a/projects/index.html
+++ b/projects/index.html
@@ -67,7 +67,8 @@
 
 <p>Check out some of my coding projects below:</p>
 <p><i class="fa fa-stethoscope"></i>   <a href="/project/project3/">Neuroscience: Using PEG Fusion to advance Nerve Repair</a></p>
-<p><i class="fa fa-pie-chart"></i>   <a href="/project/project2/">Parallel Programming: K-Means Clustering</a></p>
+<p><i class="fa fa-book"></i>   <a href="/project/project5/">Parallel Programming: K-Means Clustering Research Paper</a></p>
+<p><i class="fa fa-code-fork"></i>   <a href="/project/project6/">Parallel Programming: K-Means Clustering Source Code</a></p>
 <p><i class="fa fa-signal"></i>   <a href="/project/project1/">Wrangling &amp; Exploratory Data Analysis</a></p>
 <p><i class="fa fa-line-chart"></i>   <a href="/project/project2/">Modeling, Inference, Prediction</a></p>
 <!--
