--- a/project/project5/index.html
+++ b/project/project5/index.html
@@ -67,7 +67,7 @@
 
 <body>
 <div align="center">
-<iframe width="800" height="1000" src="/Users/AkshatPatni/Desktop/website/static/OMP_paper2.pdf" frameborder="1px">
+<iframe width="800" height="1000" src="/OMP_paper1.pdf" frameborder="1px">
 </iframe>
 </div>
 </body>
