--- a/project/project6/index.html
+++ b/project/project6/index.html
@@ -75,7 +75,7 @@
 
 <div id="kmeans.cpp-source-code" class="section level2">
 <h2>Kmeans.cpp Source Code</h2>
-<p>This program includes both the sequential and parallel implementations of the k-means algorithm. Added command line flags allow the user to either generate random points to be clustered, or use an points.txt file with a formatted list of points and output a clusters.txt file with the list of cluster centroids.</p>
+<p><em>This program includes both the sequential and parallel implementations of the k-means algorithm. Added command line flags allow the user to either generate random points to be clustered, or use an points.txt file with a formatted list of points and output a clusters.txt file with the list of cluster centroids.</em></p>
 <pre class="rcpp"><code>#include &lt;iostream&gt;
 #include &lt;sstream&gt;
 #include &lt;vector&gt;
