--- a/projects/index.html
+++ b/projects/index.html
@@ -65,7 +65,8 @@
 <script src="/rmarkdown-libs/header-attrs/header-attrs.js"></script>
 
 
-<p>Check out some of my coding projects below:</p>
+<p>Check out some of my projects below:</p>
+<p><i class="fa fa-cogs"></i>   <a href="/project/project7/">Engineering: Using Python to analyze and predict Mud Motor Failures</a></p>
 <p><i class="fa fa-stethoscope"></i>   <a href="/project/project3/">Neuroscience: Using PEG Fusion to advance Nerve Repair</a></p>
 <p><i class="fa fa-book"></i>   <a href="/project/project5/">Parallel Programming: K-Means Clustering Research Paper</a></p>
 <p><i class="fa fa-code-fork"></i>   <a href="/project/project6/">Parallel Programming: K-Means Clustering Source Code</a></p>
