--- a/project/index.html
+++ b/project/index.html
@@ -103,6 +103,19 @@
                  </div>
                  <div class="col-sm-8 col-md-8 col-lg-8">
                    <h5 style="text-align: left">
+                    <strong><a href="/project/project7/">Mud Motor Failure Python Analysis</a></strong>
+                  </h5>
+                </div>
+              </div>
+            
+              <div class="row">
+                <div class="col-sm-4 col-md-4 col-lg-4">
+                  <h5 style="text-align: right">
+                    January 1, 0001
+                  </h5>
+                 </div>
+                 <div class="col-sm-8 col-md-8 col-lg-8">
+                   <h5 style="text-align: left">
                     <strong><a href="/project/project2/">Modeling, Testing, and Predicting: Diabetes Indicators amongst Pima Indian Females</a></strong>
                   </h5>
                 </div>
